--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -27,7 +27,7 @@
     "message": "Копирано"
   },
   "starChat": {
-    "message": "Добави чат в любими"
+    "message": "Добави разговор в любими"
   },
   "unstarChat": {
     "message": "Unstar"
