--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -27,7 +27,7 @@
     "message": "কপি করা হয়েছে"
   },
   "starChat": {
-    "message": "চ্যাট প্রিয়তে যোগ করুন"
+    "message": "কথোপকথন প্রিয়তে যোগ করুন"
   },
   "unstarChat": {
     "message": "Unstar"
