--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -27,7 +27,7 @@
     "message": "Zkopírováno"
   },
   "starChat": {
-    "message": "Přidat chat do oblíbených"
+    "message": "Přidat konverzaci do oblíbených"
   },
   "unstarChat": {
     "message": "Unstar"
