--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -27,7 +27,7 @@
     "message": "Kopieret"
   },
   "starChat": {
-    "message": "Markér chat som favorit"
+    "message": "Markér samtale som favorit"
   },
   "unstarChat": {
     "message": "Unstar"
