--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -27,7 +27,7 @@
     "message": "Kopiert"
   },
   "starChat": {
-    "message": "Chat markieren"
+    "message": "Gespräch markieren"
   },
   "unstarChat": {
     "message": "Unstar"
