--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -21,7 +21,7 @@
     "message": "Unstarred"
   },
   "starChat": {
-    "message": "Star chat"
+    "message": "Star conversation"
   },
   "unstarChat": {
     "message": "Unstar"
