--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -27,7 +27,7 @@
     "message": "Copied"
   },
   "starChat": {
-    "message": "Star chat"
+    "message": "Star conversation"
   },
   "unstarChat": {
     "message": "Unstar"
