--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -27,7 +27,7 @@
     "message": "Nakopya"
   },
   "starChat": {
-    "message": "I-star ang chat"
+    "message": "I-star ang pag-uusap"
   },
   "unstarChat": {
     "message": "Unstar"
