--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -27,7 +27,7 @@
     "message": "Copié"
   },
   "starChat": {
-    "message": "Marquer le chat"
+    "message": "Marquer la conversation"
   },
   "unstarChat": {
     "message": "Unstar"
