--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -27,7 +27,7 @@
     "message": "कॉपी किया गया"
   },
   "starChat": {
-    "message": "चैट को पसंदीदा में जोड़ें"
+    "message": "बातचीत को पसंदीदा में जोड़ें"
   },
   "unstarChat": {
     "message": "Unstar"
