--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -27,7 +27,7 @@
     "message": "Másolva"
   },
   "starChat": {
-    "message": "Chat hozzáadása a kedvencekhez"
+    "message": "Beszélgetés hozzáadása a kedvencekhez"
   },
   "unstarChat": {
     "message": "Unstar"
