--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -27,7 +27,7 @@
     "message": "Disalin"
   },
   "starChat": {
-    "message": "Tambahkan obrolan ke favorit"
+    "message": "Tambahkan percakapan ke favorit"
   },
   "unstarChat": {
     "message": "Unstar"
