--- a/_locales/is/messages.json
+++ b/_locales/is/messages.json
@@ -27,7 +27,7 @@
     "message": "Afritað"
   },
   "starChat": {
-    "message": "Merkja spjall sem eftirlæti"
+    "message": "Merkja samtal sem eftirlæti"
   },
   "unstarChat": {
     "message": "Unstar"
