--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -27,7 +27,7 @@
     "message": "Copiato"
   },
   "starChat": {
-    "message": "Aggiungi chat ai preferiti"
+    "message": "Aggiungi conversazione ai preferiti"
   },
   "unstarChat": {
     "message": "Unstar"
