--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -27,7 +27,7 @@
     "message": "コピーしました"
   },
   "starChat": {
-    "message": "チャットをスター"
+    "message": "会話をスター"
   },
   "unstarChat": {
     "message": "Unstar"
