--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -27,7 +27,7 @@
     "message": "დაკოპირებულია"
   },
   "starChat": {
-    "message": "ჩატის ფავორიტებში დამატება"
+    "message": "საუბრის ფავორიტებში დამატება"
   },
   "unstarChat": {
     "message": "Unstar"
