--- a/_locales/kk/messages.json
+++ b/_locales/kk/messages.json
@@ -27,7 +27,7 @@
     "message": "Көшірілді"
   },
   "starChat": {
-    "message": "Чатты таңдаулыларға қосу"
+    "message": "Әңгімені таңдаулыларға қосу"
   },
   "unstarChat": {
     "message": "Unstar"
