--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -27,7 +27,7 @@
     "message": "បានចម្លង"
   },
   "starChat": {
-    "message": "បន្ថែមការជជែកទៅចំណូលចិត្ត"
+    "message": "បន្ថែមការសន្ទនាទៅចំណូលចិត្ត"
   },
   "unstarChat": {
     "message": "Unstar"
