--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -27,7 +27,7 @@
     "message": "복사됨"
   },
   "starChat": {
-    "message": "채팅 즐겨찾기"
+    "message": "대화 즐겨찾기"
   },
   "unstarChat": {
     "message": "Unstar"
