--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -27,7 +27,7 @@
     "message": "Nokopēts"
   },
   "starChat": {
-    "message": "Pievienot tērzēšanu izlasei"
+    "message": "Pievienot sarunu izlasei"
   },
   "unstarChat": {
     "message": "Unstar"
