--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -27,7 +27,7 @@
     "message": "Disalin"
   },
   "starChat": {
-    "message": "Tambah sembang ke kegemaran"
+    "message": "Tambah perbualan ke kegemaran"
   },
   "unstarChat": {
     "message": "Unstar"
