--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -27,7 +27,7 @@
     "message": "ကူးယူပြီးပါပြီ"
   },
   "starChat": {
-    "message": "ချက်တင်ကို အကြိုက်ဆုံးများတွင် ထည့်မည်"
+    "message": "စကားဝိုင်းကို အကြိုက်ဆုံးများတွင် ထည့်မည်"
   },
   "unstarChat": {
     "message": "Unstar"
