--- a/_locales/ne/messages.json
+++ b/_locales/ne/messages.json
@@ -27,7 +27,7 @@
     "message": "प्रतिलिपि गरियो"
   },
   "starChat": {
-    "message": "च्याट मनपर्नेमा थप्नुहोस्"
+    "message": "वार्तालाप मनपर्नेमा थप्नुहोस्"
   },
   "unstarChat": {
     "message": "Unstar"
