--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -27,7 +27,7 @@
     "message": "Gekopieerd"
   },
   "starChat": {
-    "message": "Chat toevoegen aan favorieten"
+    "message": "Gesprek toevoegen aan favorieten"
   },
   "unstarChat": {
     "message": "Unstar"
