--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -27,7 +27,7 @@
     "message": "Kopiert"
   },
   "starChat": {
-    "message": "Merk chat som favoritt"
+    "message": "Merk samtale som favoritt"
   },
   "unstarChat": {
     "message": "Unstar"
