--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -27,7 +27,7 @@
     "message": "Skopiowano"
   },
   "starChat": {
-    "message": "Dodaj czat do ulubionych"
+    "message": "Dodaj rozmowę do ulubionych"
   },
   "unstarChat": {
     "message": "Unstar"
