--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -27,7 +27,7 @@
     "message": "Скопировано"
   },
   "starChat": {
-    "message": "Добавить чат в избранное"
+    "message": "Добавить разговор в избранное"
   },
   "unstarChat": {
     "message": "Unstar"
