--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -27,7 +27,7 @@
     "message": "පිටපත් කළා"
   },
   "starChat": {
-    "message": "කතාබස් ප්‍රියතම ලෙස සලකුණු කරන්න"
+    "message": "සංවාදය ප්‍රියතම ලෙස සලකුණු කරන්න"
   },
   "unstarChat": {
     "message": "Unstar"
