--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -27,7 +27,7 @@
     "message": "Skopírované"
   },
   "starChat": {
-    "message": "Pridať chat do obľúbených"
+    "message": "Pridať konverzáciu do obľúbených"
   },
   "unstarChat": {
     "message": "Unstar"
