--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -27,7 +27,7 @@
     "message": "Копирано"
   },
   "starChat": {
-    "message": "Додај ћаскање у омиљене"
+    "message": "Додај разговор у омиљене"
   },
   "unstarChat": {
     "message": "Unstar"
