--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -27,7 +27,7 @@
     "message": "Kopierat"
   },
   "starChat": {
-    "message": "Stjärnmarkera chatt"
+    "message": "Stjärnmarkera konversation"
   },
   "unstarChat": {
     "message": "Unstar"
