--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -27,7 +27,7 @@
     "message": "คัดลอกแล้ว"
   },
   "starChat": {
-    "message": "เพิ่มแชทในรายการโปรด"
+    "message": "เพิ่มบทสนทนาในรายการโปรด"
   },
   "unstarChat": {
     "message": "Unstar"
