--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -27,7 +27,7 @@
     "message": "Kopyalandı"
   },
   "starChat": {
-    "message": "Sohbeti favorilere ekle"
+    "message": "Konuşmayı favorilere ekle"
   },
   "unstarChat": {
     "message": "Unstar"
