--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -27,7 +27,7 @@
     "message": "Скопійовано"
   },
   "starChat": {
-    "message": "Додати чат в обране"
+    "message": "Додати розмову в обране"
   },
   "unstarChat": {
     "message": "Unstar"
