--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Timeline - 为 AI 对话添加可交互时间轴，ChatGPT, Gemini, DeepSeek, grok"
   },
   "extDescription": {
-    "message": "把你跟 AI 的对话整理成可交互时间轴，🚀快速预览并跳转、📌标记重点对话、⭐️收藏重要聊天、❤️复制 LaTeX 公式，让效率翻倍！"
+    "message": "把你跟 AI 的对话整理成可交互时间轴，🚀快速预览并跳转、📌标记重点对话、⭐️收藏重要对话、❤️复制 LaTeX 公式，让效率翻倍！"
   },
   "viewStarred": {
     "message": "查看收藏"
@@ -21,7 +21,7 @@
     "message": "已取消收藏"
   },
   "starChat": {
-    "message": "收藏聊天"
+    "message": "收藏对话"
   },
   "unstarChat": {
     "message": "取消收藏"
