--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -27,7 +27,7 @@
     "message": "已複製"
   },
   "starChat": {
-    "message": "收藏聊天"
+    "message": "收藏對話"
   },
   "unstarChat": {
     "message": "取消收藏"
