--- a/_locales/es_419/messages.json
+++ b/_locales/es_419/messages.json
@@ -27,7 +27,7 @@
     "message": "Copiado"
   },
   "starChat": {
-    "message": "Marcar chat como favorito"
+    "message": "Marcar conversación como favorita"
   },
   "unstarChat": {
     "message": "Unstar"
